# safe-play

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .vercelignore  Dockerfile  README.md  post.md  pyproject.toml  requirements.txt  setup.py  vercel.json
api/: index.py
conductor/: index.md  product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
config/: mosquitto.conf
docs/: architecture.md  idea.md  roadmap.md  skill.md
logs/: audit_trail.jsonl
public/: index.html
src/: audit.py  config.py  connection_manager.py  copilot.py  exceptions.py  inference.py  models.py  mqtt_handler.py  orchestrator.py  routing.pyx  simulator.py  web_api.py
src/static/: index.html
stitch_edgepulse_2026_stadium_intelligence/: edgepulse_2026_middleware_specs.md
stitch_edgepulse_2026_stadium_intelligence/approval_queue/: code.html
stitch_edgepulse_2026_stadium_intelligence/audit_log/: code.html
stitch_edgepulse_2026_stadium_intelligence/edgepulse_2026/: DESIGN.md
stitch_edgepulse_2026_stadium_intelligence/incident_feed/: code.html
stitch_edgepulse_2026_stadium_intelligence/live_venue_map/: code.html
stitch_edgepulse_2026_stadium_intelligence/model_ops/: code.html
stitch_edgepulse_2026_stadium_intelligence/overview_dashboard_1/: code.html
stitch_edgepulse_2026_stadium_intelligence/sensor_node_health/: code.html
stitch_edgepulse_2026_stadium_intelligence/settings_configuration/: code.html
tests/: conftest.py  test_end_to_end.py  test_extensive_scenarios.py  test_fallbacks.py  test_mqtt.py  test_schemas.py  test_web_api.py
(+7 files in other folders)
